--- a/Common/Window/Display.twig
+++ b/Common/Window/Display.twig
@@ -43,18 +43,26 @@
     <script type="text/javascript">
         var executeScript = function (Callback)
         {
-
+            // Save On-Load
             var Event = window.onload;
+            // Init On-Load
             if (typeof window.onload != 'function') {
-                window.onload = Callback;
-            } else {
-                window.onload = function () {
-                    if (Event) {
-                        Event();
-                    }
-                    Callback();
-                }
+                window.onload = function ()
+                {
+                    executeScript = function (Callback)
+                    {
+                        Callback();
+                    };
+                };
+                Event = window.onload;
             }
+            // Append On-Load
+            window.onload = function () {
+                if (Event) {
+                    Event();
+                }
+                Callback();
+            };
         }
     </script>
 </head>
