--- a/Common/Window/Display.twig
+++ b/Common/Window/Display.twig
@@ -217,11 +217,11 @@
 <script src="{{ PathBase }}/Common/Script/Loader.js"></script>
 {{ ManagerScript }}
 <script>
-    var _paq = _paq || [];
-    _paq.push(["setDoNotTrack", true]);
-    _paq.push(["disableCookies"]);
-    _paq.push(['trackPageView']);
-    _paq.push(['enableLinkTracking']);
+//    var _paq = _paq || [];
+//    _paq.push(["setDoNotTrack", true]);
+//    _paq.push(["disableCookies"]);
+//    _paq.push(['trackPageView']);
+//    _paq.push(['enableLinkTracking']);
 
     executeScript(function()
     {
@@ -231,18 +231,18 @@
 
         });
 
-        (function()
-        {
-            var u = "/Library/Piwik/";
-            _paq.push(['setTrackerUrl', u + 'piwik.php']);
-            _paq.push(['setSiteId', 1]);
-            var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
-            g.type = 'text/javascript';
-            g.async = true;
-            g.defer = true;
-            g.src = u + 'piwik.js';
-            s.parentNode.insertBefore(g, s);
-        })();
+//        (function()
+//        {
+//            var u = "/Library/Piwik/";
+//            _paq.push(['setTrackerUrl', u + 'piwik.php']);
+//            _paq.push(['setSiteId', 1]);
+//            var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
+//            g.type = 'text/javascript';
+//            g.async = true;
+//            g.defer = true;
+//            g.src = u + 'piwik.js';
+//            s.parentNode.insertBefore(g, s);
+//        })();
     });
 </script>
 </body>
