--- a/Common/Window/Display.twig
+++ b/Common/Window/Display.twig
@@ -158,8 +158,8 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-lg-offset-1 col-lg-10 col-xs-12">
-            {#<div class="col-xs-12">#}
+        {#<div class="col-lg-offset-1 col-lg-10 col-xs-12">#}
+            <div class="col-xs-12">
             <span class="loading-indicator">
                 <span class="text-muted">Zusätzliche Komponenten werden geladen</span>
                 <span class="loading-indicator-animate"></span>
