--- a/Common/Style/variables.less
+++ b/Common/Style/variables.less
@@ -156,7 +156,8 @@
 @navbar-collapse-max-height: 340px;
 @navbar-default-color: #777;
 @navbar-default-bg: #f8f8f8;
-@navbar-default-border: darken(@navbar-default-bg, 6.5%);
+@navbar-default-border: @navbar-default-bg;
+  /*darken(@navbar-default-bg, 6.5%);*/
 @navbar-default-link-color: #777;
 @navbar-default-link-hover-color: #333;
 @navbar-default-link-hover-bg: transparent;
