--- a/Common/Style/variables.less
+++ b/Common/Style/variables.less
@@ -31,8 +31,8 @@
 @font-size-h6: ceil((@font-size-base * 0.85));
 @line-height-base: 1.428571429;
 @line-height-computed: floor((@font-size-base * @line-height-base));
-@headings-font-family: "CorpoABold";
-@headings-font-weight: 500;
+@headings-font-family: "CorpoA";
+@headings-font-weight: normal;
 @headings-line-height: 1.1;
 @headings-color: inherit;
 @icon-font-path: "../../Library/Bootstrap/3.3.7/fonts/";
