--- a/Common/Style/Stage.Correction.css
+++ b/Common/Style/Stage.Correction.css
@@ -2,6 +2,7 @@ div.window-stage {
     background: #fff;
 }
 
+div.window-stage div.stage-teaser h3:before,
 div.window-stage div.stage-header h3:before {
     height: 2px;
     width: 60px;
@@ -19,7 +20,12 @@ div.window-stage div.stage-header {
     padding-right: 20px;
 }
 
+div.window-stage div.stage-teaser {
+    background: #222222;
+}
+
 div.window-stage div.stage-body {
+    color: #222222;
     padding-top: 1px;
     padding-bottom: 20px;
     padding-left: 20px;
