--- a/Common/Style/variables.less
+++ b/Common/Style/variables.less
@@ -20,7 +20,7 @@
 @font-family-serif: "CorpoA", Georgia, "Times New Roman", Times, serif;
 @font-family-monospace: Menlo, Monaco, Consolas, "Courier New", monospace;
 @font-family-base: @font-family-sans-serif;
-@font-size-base: 17px;
+@font-size-base: 16px;
 @font-size-large: ceil((@font-size-base * 1.25));
 @font-size-small: ceil((@font-size-base * 0.85));
 @font-size-h1: floor((@font-size-base * 2.6));
@@ -63,9 +63,9 @@
 @table-bg-active: @table-bg-hover;
 @table-border-color: #ddd;
 @btn-font-weight: normal;
-@btn-default-color: #333;
-@btn-default-bg: #fff;
-@btn-default-border: #ccc;
+@btn-default-color: #999;
+@btn-default-bg: #ccc;
+@btn-default-border: #333;
 @btn-primary-color: #fff;
 @btn-primary-bg: @brand-primary;
 @btn-primary-border: darken(@btn-primary-bg, 5%);
@@ -155,13 +155,13 @@
 @navbar-padding-vertical: ((@navbar-height - @line-height-computed) / 2);
 @navbar-collapse-max-height: 340px;
 @navbar-default-color: #777;
-@navbar-default-bg: #f8f8f8;
+@navbar-default-bg: transparent;
 @navbar-default-border: @navbar-default-bg;
   /*darken(@navbar-default-bg, 6.5%);*/
 @navbar-default-link-color: #777;
-@navbar-default-link-hover-color: #333;
+@navbar-default-link-hover-color: lighten(@brand-primary, 15%);
 @navbar-default-link-hover-bg: transparent;
-@navbar-default-link-active-color: #555;
+@navbar-default-link-active-color: @brand-primary;
 @navbar-default-link-active-bg: darken(@navbar-default-bg, 6.5%);
 @navbar-default-link-disabled-color: #ccc;
 @navbar-default-link-disabled-bg: transparent;
@@ -235,7 +235,7 @@
 @state-warning-text: #8a6d3b;
 @state-warning-bg: #fcf8e3;
 @state-warning-border: darken(spin(@state-warning-bg, -10), 5%);
-@state-danger-text: #fff;
+@state-danger-text: lighten(spin(@state-danger-bg, -10), 5%);;
 @state-danger-bg: #9f0002;
 @state-danger-border: darken(spin(@state-danger-bg, -10), 5%);
 @tooltip-max-width: 200px;
@@ -354,11 +354,11 @@
 @badge-font-weight: normal;
 @badge-line-height: 1;
 @badge-border-radius: 10px;
-@breadcrumb-padding-vertical: 8px;
+@breadcrumb-padding-vertical: 5px;
 @breadcrumb-padding-horizontal: 15px;
-@breadcrumb-bg: #f5f5f5;
+@breadcrumb-bg: #f8f8f8;
 @breadcrumb-color: #ccc;
-@breadcrumb-active-color: @gray-light;
+@breadcrumb-active-color: @brand-primary;
 @breadcrumb-separator: "/";
 @carousel-text-shadow: 0 1px 2px rgba(0,0,0,.6);
 @carousel-control-color: #fff;
