--- a/Common/Window/Display.twig
+++ b/Common/Window/Display.twig
@@ -44,6 +44,20 @@
 
         <div class="cover-container">
 
+            <script>
+                //noinspection JSUnresolvedFunction
+                executeScript(function()
+                {
+                    Client.Use('ModAlways', function() {
+                        $('div.nav-area').on('mouseenter mouseleave', function () {
+                            $(this).trigger('click');
+                        });
+                    });
+                });
+            </script>
+
+            <div class="nav-area" data-toggle="collapse" data-target="#nav-toggle">
+
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-offset-1 col-lg-3 col-md-4 col-sm-4 hidden-xs">
@@ -51,7 +65,7 @@
                     </div>
                     <div class="col-lg-7 col-md-8 col-sm-8 col-xs-12">
 
-                        <nav class="navbar navbar-inverse">
+                        <nav class="navbar navbar-default">
                             <div class="container-fluid">
                                 <!-- Brand and toggle get grouped for better mobile display -->
                                 <div class="navbar-header">
@@ -90,6 +104,7 @@
                                         {#</div>#}
                                         {#<button type="submit" class="btn btn-default">Submit</button>#}
                                     {#</form>#}
+                                    <small>
                                     <ul class="nav navbar-nav navbar-right">
                                         <li class="dropdown">
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -103,11 +118,13 @@
                                         </li>
                                         {{ NavigationService }}
                                     </ul>
+                                    </small>
                                 {#</div><!-- /.navbar-collapse -->#}
                             </div><!-- /.container-fluid -->
                         </nav>
 
-                        <nav class="navbar navbar-inverse">
+                        <div class="window-nav nav-cluster">
+                            <nav class="navbar navbar-inverse">
                             <div class="container-fluid">
                                 <!-- Brand and toggle get grouped for better mobile display -->
                                 <div class="navbar-header">
@@ -140,16 +157,17 @@
                                 {#</div><!-- /.navbar-collapse -->#}
                             </div><!-- /.container-fluid -->
                         </nav>
-
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <div class="container-fluid">
+            <div class="container-fluid collapse" id="nav-toggle">
+                {% if( NavigationApplication is not empty ) %}
                 <div class="row">
                     <div class="col-lg-offset-1 col-lg-10 col-xs-12">
                         <div class="window-nav nav-application">
-                            <nav class="navbar navbar-default">
+                            <nav class="navbar navbar-inverse">
                                 <div class="container-fluid">
                                     <ul class="nav navbar-nav">
                                         {{ NavigationApplication }}
@@ -159,10 +177,12 @@
                         </div>
                     </div>
                 </div>
+                {% endif %}
+                {% if( NavigationModule is not empty ) %}
                 <div class="row">
                     <div class="col-lg-offset-1 col-lg-10 col-xs-12">
                         <div class="window-nav nav-module">
-                            <nav class="navbar navbar-default">
+                            <nav class="navbar navbar-inverse">
                                 <div class="container-fluid">
                                     <ul class="nav navbar-nav">
                                         {{ NavigationModule }}
@@ -170,6 +190,30 @@
                                 </div>
                             </nav>
                         </div>
+                    </div>
+                </div>
+                {% endif %}
+            </div>
+
+            </div>
+
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-offset-1 col-lg-10 col-xs-12">
+                        <ol class="breadcrumb" style="margin: 5px 0;">
+                            {% if(BreadcrumbList is not empty) %}
+                                {% set Link = '' %}
+                                {% for Index, Crumb in BreadcrumbList %}
+                                    {% set Link = Link ~ '/' ~ Crumb %}
+                                    {% set Crumb = Crumb|replace({'-und-': " & "}) %}
+                                    {% if(Index == BreadcrumbList|length) %}
+                                        <li class="active"><small>{{ Crumb }}</small></li>
+                                    {% else %}
+                                        <li><a href="{{ Link }}"><small>{{ Crumb }}</small></a></li>
+                                    {% endif %}
+                                {% endfor %}
+                            {% endif %}
+                        </ol>
                     </div>
                 </div>
             </div>
