Add FontAwesome, Slick

--- a/Common/Frontend/Layout/Repository/Thumbnail.twig
+++ b/Common/Frontend/Layout/Repository/Thumbnail.twig
@@ -6,7 +6,7 @@
             <h4>{{ Title }}</h4>
         {% endif %}
         {% if( Description|length > 0) %}
-            <p>{{ Description }}</p>
+            <small class="text-muted">{{ Description }}</small>
         {% endif %}
         {% if( ButtonList|length > 0) %}
             <p>
