--- a/Common/Style/variables.less
+++ b/Common/Style/variables.less
@@ -63,9 +63,9 @@
 @table-bg-active: @table-bg-hover;
 @table-border-color: #ddd;
 @btn-font-weight: normal;
-@btn-default-color: #999;
-@btn-default-bg: #ccc;
-@btn-default-border: #333;
+@btn-default-color: #fff;
+@btn-default-bg: #333333;
+@btn-default-border: #202020;
 @btn-primary-color: #fff;
 @btn-primary-bg: @brand-primary;
 @btn-primary-border: darken(@btn-primary-bg, 5%);
@@ -319,7 +319,7 @@
 @panel-footer-padding: @panel-heading-padding;
 @panel-border-radius: @border-radius-base;
 @panel-inner-border: #333333;
-@panel-footer-bg: #666666;
+@panel-footer-bg: #ececec;
 @panel-default-text: @gray-lighter;
 @panel-default-border: #333333;
 @panel-default-heading-bg: #333333;
@@ -338,9 +338,9 @@
 @panel-danger-text: @state-danger-text;
 @panel-danger-border: @state-danger-border;
 @panel-danger-heading-bg: @state-danger-bg;
-@thumbnail-padding: 4px;
+@thumbnail-padding: 0;
 @thumbnail-bg: @body-bg;
-@thumbnail-border: #ddd;
+@thumbnail-border: transparent;
 @thumbnail-border-radius: @border-radius-base;
 @thumbnail-caption-color: @text-color;
 @thumbnail-caption-padding: 9px;
