--- a/Common/Style/Panel.Correction.css
+++ b/Common/Style/Panel.Correction.css
@@ -1,6 +1,9 @@
 .panel-heading {
     border-radius: 0;
 }
+.panel-heading .panel-title {
+    color: #fff;
+}
 .panel-footer {
     border-radius: 0;
 }
