--- a/Common/Style/Stage.Correction.css
+++ b/Common/Style/Stage.Correction.css
@@ -11,7 +11,9 @@ div.window-stage div.stage-header h3:before {
     content: '';
     margin: 10px 0;
 }
-
+div.window-stage div.stage-message {
+    margin-top: 5px;
+}
 div.window-stage div.stage-header {
     background: #222222;
     padding-top: 1px;
@@ -26,7 +28,7 @@ div.window-stage div.stage-teaser {
 
 div.window-stage div.stage-body {
     color: #222222;
-    padding-top: 1px;
+    padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 20px;
     padding-right: 20px;
