--- a/Common/Window/Display.twig
+++ b/Common/Window/Display.twig
@@ -44,17 +44,17 @@
 
         <div class="cover-container">
 
-            <script>
-                //noinspection JSUnresolvedFunction
-                executeScript(function()
-                {
-                    Client.Use('ModAlways', function() {
-                        $('div.nav-area').on('mouseenter mouseleave', function () {
-                            $(this).trigger('click');
-                        });
-                    });
-                });
-            </script>
+            {#<script>#}
+                {#//noinspection JSUnresolvedFunction#}
+                {#executeScript(function()#}
+                {#{#}
+                    {#Client.Use('ModAlways', function() {#}
+                        {#$('div.nav-area').on('mouseenter mouseleave', function () {#}
+                            {#$(this).trigger('click');#}
+                        {#});#}
+                    {#});#}
+                {#});#}
+            {#</script>#}
 
             <div class="nav-area" data-toggle="collapse" data-target="#nav-toggle">
 
@@ -162,7 +162,7 @@
                 </div>
             </div>
 
-            <div class="container-fluid collapse" id="nav-toggle">
+            <div class="container-fluid collapse in" id="nav-toggle">
                 {% if( NavigationApplication is not empty ) %}
                 <div class="row">
                     <div class="col-lg-offset-1 col-lg-10 col-xs-12">
@@ -182,6 +182,7 @@
                 <div class="row">
                     <div class="col-lg-offset-1 col-lg-10 col-xs-12">
                         <div class="window-nav nav-module">
+                            <hr/>
                             <nav class="navbar navbar-inverse">
                                 <div class="container-fluid">
                                     <ul class="nav navbar-nav">
@@ -197,11 +198,11 @@
 
             </div>
 
+            {% if(BreadcrumbList is not empty) %}
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-offset-1 col-lg-10 col-xs-12">
                         <ol class="breadcrumb" style="margin: 5px 0;">
-                            {% if(BreadcrumbList is not empty) %}
                                 {% set Link = '' %}
                                 {% for Index, Crumb in BreadcrumbList %}
                                     {% set Link = Link ~ '/' ~ Crumb %}
@@ -212,11 +213,11 @@
                                         <li><a href="{{ Link }}"><small>{{ Crumb }}</small></a></li>
                                     {% endif %}
                                 {% endfor %}
-                            {% endif %}
                         </ol>
                     </div>
                 </div>
             </div>
+            {% endif %}
 
             <div class="container-fluid">
                 <div class="row">
