--- a/Common/Window/Stage.twig
+++ b/Common/Window/Stage.twig
@@ -2,15 +2,38 @@
     {% if( StageTitle is not empty or StageDescription is not empty or StageMessage is not empty ) %}
 
         <div class="stage-header">
-            {% if StageTitle is not empty %}
-                <h3>{{ StageTitle }}</h3>
-            {% endif %}
-            <small>{{ StageDescription }}</small>
-            <br/>
-            {% if StageMessage is not empty %}
-                {{ StageMessage }}
-                <br/>
-            {% endif %}
+
+            <div class="clearfix">
+                <div class="pull-left">
+
+                    {% if StageTitle is not empty %}
+                        <h3>{{ StageTitle }}</h3>
+                    {% endif %}
+                    <small>{{ StageDescription }}</small>
+                    <br/>
+
+                </div>
+                <div class="pull-right" style="margin-top: 22px;">
+
+                    {% if StageMenu is not empty %}
+                        {#<div class="btn-group">#}
+                        {% for Button in StageMenu %}
+                            {{ Button }}
+                        {% endfor %}
+                        {#</div>#}
+                        <br/>
+                    {% endif %}
+
+                </div>
+            </div>
+
+            <div class="stage-message">
+                {% if StageMessage is not empty %}
+                    {{ StageMessage }}
+                    <br/>
+                {% endif %}
+            </div>
+
         </div>
 
     {% endif %}
@@ -20,18 +43,6 @@
             {{ StageTeaser }}
         </div>
     {% endif %}
-
-    {% if StageMenu is not empty %}
-        <div class="stage-header">
-            {#<div class="btn-group">#}
-            {% for Button in StageMenu %}
-                {{ Button }}
-            {% endfor %}
-            {#</div>#}
-        </div>
-        <br/>
-    {% endif %}
-
 
     <div class="stage-body">{{ StageContent }}</div>
 </div>
