--- a/Common/Frontend/Layout/Structure/Slick.twig
+++ b/Common/Frontend/Layout/Structure/Slick.twig
@@ -1,21 +1,25 @@
-<div class="container">
-    <div class="row">
+<div class="container container-slick hidden-xs">
         <div class="slick">
-            <div><img src="/Common/Style/Resource/Teaser/00-mercedes-benz-design-aesthetics-a-1280-686-848x454.jpg"> </div>
-            <div>your content2</div>
-            <div>your content3</div>
+            {% for Item in SlideList %}
+                <div>{{ Item }}</div>
+            {% endfor %}
         </div>
-    </div>
 </div>
 <script type="text/javascript">
     //noinspection JSUnresolvedFunction
     executeScript(function () {
         Client.Use('ModSlick', function () {
             jQuery('div.slick').ModSlick({
-                infinite: true,
-                slidesToShow: 1,
-                slidesToScroll: 1
+                acessibility: true,
+                adaptiveHeight: false,
+                mobileFirst: true
             });
+            jQuery(window).on('resize', function () {
+                jQuery('.container-slick').width( jQuery('.stage-teaser').width() );
+            });
+            window.setTimeout(function() {
+                jQuery('.container-slick').width( jQuery('.stage-teaser').width() );
+            }, 100);
         });
     });
 </script>
