--- a/Common/Window/Display.twig
+++ b/Common/Window/Display.twig
@@ -337,47 +337,48 @@
     {#</div>#}
 {#</div>#}
 
-{#<div class="container-fluid hidden-print footer">#}
-    {#<div class="row">#}
-        {#<div class="col-xs-12 small" style="border-top: 1px solid #E7E7E7;">#}
-            {#<div class="text-center small" style="padding: 5px;">#}
+<div class="container-fluid hidden-print footer">
+    <div class="row">
+        <div class="col-xs-12 small">
+            <hr style="border-color: #333333;"/>
+            <div class="text-center small text-muted" style="padding: 5px;">
 
-                {#<span class="glyphicons glyphicons-paragraph-alt"></span> {{ Consumer }}#}
+                <span class="glyphicons glyphicons-paragraph-alt"></span> {{ Consumer }}
 
-                {#<br/>#}
+                <br/>
 
-                {#<span class="glyphicons glyphicons-clock"></span> {{ DebuggerRuntime }}#}
-                {#|#}
-                {#<span class="glyphicons glyphicons-globe"></span> {{ DebuggerHost }} {{ CpuLoad }}#}
-                {#|#}
-                {#<span class="glyphicons glyphicons-person-running"></span> {{ DebuggerSessionCount }}#}
-                {#|#}
-                {#<span class="glyphicons glyphicons-cluster"></span> {{ CacheSlot }} {{ MemoryPeak }}#}
+                <span class="glyphicons glyphicons-clock"></span> {{ DebuggerRuntime }}
+                |
+                <span class="glyphicons glyphicons-globe"></span> {{ DebuggerHost }} {{ CpuLoad }}
+                |
+                <span class="glyphicons glyphicons-person-running"></span> {{ DebuggerSessionCount }}
+                |
+                <span class="glyphicons glyphicons-cluster"></span> {{ CacheSlot }} {{ MemoryPeak }}
 
-                {#<br/>#}
+                <br/>
 
-                {#<a href="/Roadmap/Current"><span class="glyphicons glyphicons-bookmark"></span> {{ RoadmapVersion }}</a>#}
-                {#|#}
-                {#<a href="http://www.beyondsecurity.com/vulnerability-scanner-verification/www.kreda.schule"#}
-                   {#class="text-success" rel="external">#}
-                    {#<span class="glyphicons glyphicons-shield"></span> Secure Website#}
-                {#</a>#}
-                {#|#}
-                {#<a href="/Document/License" class="text-warning">#}
-                    {#<span class="halflings halflings-copyright-mark"></span> 2014 - {{ "now"|date("Y") }}#}
-                {#</a>#}
-                {#|#}
-                {#<a href="/Document/LegalNotice" class="text-warning">#}
-                    {#<span class="glyphicons glyphicons-quote"></span> Impressum#}
-                {#</a>#}
+                <a href="/Roadmap/Current"><span class="glyphicons glyphicons-bookmark"></span> {{ RoadmapVersion }}</a>
+                |
+                <a href="http://www.beyondsecurity.com/vulnerability-scanner-verification/www.[...]"
+                   class="text-success" rel="external">
+                    <span class="glyphicons glyphicons-shield"></span> Secure Website
+                </a>
+                |
+                <a href="/Document/License" class="text-warning">
+                    <span class="halflings halflings-copyright-mark"></span> 2014 - {{ "now"|date("Y") }}
+                </a>
+                |
+                <a href="/Document/LegalNotice" class="text-warning">
+                    <span class="glyphicons glyphicons-quote"></span> Impressum
+                </a>
 
-                {#<div class="text-left" style="font-size: 1.1em;">#}
-                    {#{{ DebuggerProtocol }}#}
-                {#</div>#}
-            {#</div>#}
-        {#</div>#}
-    {#</div>#}
-{#</div>#}
+                <div class="text-left" style="font-size: 1.1em; margin-top: 10px;">
+                    {{ DebuggerProtocol }}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script src="{{ PathBase }}/Common/Script/Loader.js"></script>
 {{ ManagerScript }}
