Structure & Style Refactor

--- a/Common/Frontend/Link/Repository/External.twig
+++ b/Common/Frontend/Link/Repository/External.twig
@@ -1,5 +1,5 @@
-<a id="{{ Hash }}" href="{{ ElementPath }}" class="{{ ElementType }}" data-toggle="tooltip" data-container="body"
-   title="{{ ElementToolTip }}" rel="external">{{ ElementIcon }} {{ ElementName }}</a>
+<a id="{{ Hash }}" href="{{ ElementPath }}" class="{{ ElementType }}" data-trigger="hover" data-toggle="popover"
+   data-content="{{ ElementToolTip }}" title="{{ ElementName }}" rel="external">{{ ElementIcon }} {{ ElementName }}</a>
 
 <script language=javascript>
     //noinspection JSUnresolvedFunction
