--- a/Common/Style/Resource.css
+++ b/Common/Style/Resource.css
@@ -45,26 +45,33 @@ body {
     line-height: inherit !important;
 }
 
-div.MB-Logo {
-    width: 257px;
-    height: 110px;
-    background: transparent url("Resource/MB-Logo-2016-2.gif") no-repeat left center;
+.thumbnail {
+    border: none;
 }
 
-div.MB-Logo-Mobile {
-    width: 30px;
-    height: 30px;
-    background: transparent url("Resource/MB-Logo-2016-2.gif") no-repeat left center;
-}
 
-div.window-nav.nav-cluster {
-    margin-top: 26px;
-}
-div.window-nav.nav-application,
-div.window-nav.nav-module {
-    background: #222222;
-}
-div.window-nav.nav-module hr {
-    margin: 0;
-    border-color: #333333;
-}
+
+
+/*div.MB-Logo {*/
+    /*width: 257px;*/
+    /*height: 110px;*/
+    /*background: transparent url("Resource/MB-Logo-2016-2.gif") no-repeat left center;*/
+/*}*/
+
+/*div.MB-Logo-Mobile {*/
+    /*width: 30px;*/
+    /*height: 30px;*/
+    /*background: transparent url("Resource/MB-Logo-2016-2.gif") no-repeat left center;*/
+/*}*/
+
+/*div.window-nav.nav-cluster {*/
+    /*margin-top: 26px;*/
+/*}*/
+/*div.window-nav.nav-application,*/
+/*div.window-nav.nav-module {*/
+    /*background: #222222;*/
+/*}*/
+/*div.window-nav.nav-module hr {*/
+    /*margin: 0;*/
+    /*border-color: #333333;*/
+/*}*/
