--- a/Common/Window/Error.twig
+++ b/Common/Window/Error.twig
@@ -1,5 +1,5 @@
-<div class="row">
-    <div class="col-lg-offset-1 col-lg-10 col-xs-12">
+{#<div class="row">#}
+    {#<div class="col-lg-offset-1 col-lg-10 col-xs-12">#}
         <h3 class="text-danger">
             Es ist ein Fehler aufgetreten
         </h3>
@@ -21,5 +21,5 @@
         </div>
         <hr/>
         <div class="text-left alert alert-warning">{{ ErrorMessage }}</div>
-    </div>
-</div>
+    {#</div>#}
+{#</div>#}
