--- a/Common/Style/SelectBox.Correction.css
+++ b/Common/Style/SelectBox.Correction.css
@@ -1,10 +1,12 @@
 .selecter {
+    /*font-family: "CorporateSDemi";*/
     font-size: 16px;
     max-width: inherit;
     margin: inherit;
 }
 
 .selecter-selected {
+    /*font-family: "CorporateSDemi";*/
     font-size: 16px;
     padding: 6px 12px;
     border-top-left-radius: 0;
@@ -14,6 +16,7 @@
 }
 
 .selecter-item {
+    /*font-family: "CorporateSDemi";*/
     font-size: 16px;
     padding: 6px 12px;
 }
