--- a/Common/Style/Stage.Correction.css
+++ b/Common/Style/Stage.Correction.css
@@ -11,6 +11,21 @@ div.window-stage div.stage-header h3:before {
     content: '';
     margin: 10px 0;
 }
+
+div.window-stage div.stage-body h4:before {
+    height: 2px;
+    width: 30px;
+    background-color: #000;
+    display: block;
+    content: '';
+    margin: 10px 0;
+}
+
+div.window-stage div.stage-body hr {
+    margin: 0 0 10px 0;
+    border-color: #cccccc;
+}
+
 div.window-stage div.stage-message {
     margin-top: 5px;
 }
@@ -32,4 +47,27 @@ div.window-stage div.stage-body {
     padding-bottom: 20px;
     padding-left: 20px;
     padding-right: 20px;
+}
+
+.breadcrumb > li + li:before {
+    font-family: "FontAwesome";
+    content: "\f105";
+}
+
+/** LIST GROUP **/
+.list-group .list-group-item {
+    padding: 5px 10px;
+}
+
+td > .list-group {
+    margin-bottom: 0;
+}
+
+
+
+input,
+button,
+select,
+textarea {
+    /*font-family: "CorporateSDemi";*/
 }
