--- a/Common/Style/NavBar.Correction.css
+++ b/Common/Style/NavBar.Correction.css
@@ -10,9 +10,19 @@
 }
 
 .navbar.navbar-cluster {
-    margin-top: 26px;
+    /*margin-top: 26px;*/
 }
-
+.navbar.navbar-cluster ul li a {
+    font-size: 15px;
+}
+.navbar.navbar-cluster ul li a span {
+    margin-bottom: 5px;
+    font-size: 25px;
+    display: block;
+    text-align: center;
+    color: #666;
+    height: 25px;
+}
 .navbar.navbar-application {
     background: #222222;
 }
