Favorite Test Layout

--- a/Common/Style/variables.less
+++ b/Common/Style/variables.less
@@ -77,7 +77,7 @@
 @btn-info-border: darken(@btn-info-bg, 5%);
 @btn-warning-color: #fff;
 @btn-warning-bg: @brand-warning;
-@btn-warning-border: darken(@btn-warning-bg, 5%);
+@btn-warning-border: @btn-default-border;
 @btn-danger-color: #fff;
 @btn-danger-bg: @brand-danger;
 @btn-danger-border: darken(@btn-danger-bg, 5%);
