--- a/Common/Style/NavBar.Correction.css
+++ b/Common/Style/NavBar.Correction.css
@@ -12,10 +12,10 @@
 .navbar.navbar-cluster {
     /*margin-top: 26px;*/
 }
-.navbar.navbar-cluster ul li a {
+.navbar.navbar-cluster ul > li > a {
     font-size: 15px;
 }
-.navbar.navbar-cluster ul li a span {
+.navbar.navbar-cluster > ul > li > a span {
     margin-bottom: 5px;
     font-size: 25px;
     display: block;
