--- a/Common/Window/Display.twig
+++ b/Common/Window/Display.twig
@@ -55,6 +55,17 @@
                     </nav>
                     <nav class="navbar navbar-inverse navbar-cluster">
                         <ul class="nav navbar-nav navbar-right">
+
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                    <span class="glyphicons glyphicons-star" aria-hidden="true"></span>&nbsp;Favoriten
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#"><span class="glyphicons glyphicons-link" aria-hidden="true"></span>&nbsp;Mandantenverwaltung</a></li>
+                                    <li><a href="#"><span class="glyphicons glyphicons-link" aria-hidden="true"></span>&nbsp;Cache</a></li>
+                                    <li><a href="#"><span class="glyphicons glyphicons-link" aria-hidden="true"></span>&nbsp;Protokoll</a></li>
+                                </ul>
+                            </li>
                             {{ NavigationCluster }}
                         </ul>
                     </nav>
